--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,10 @@
 	font-size: 30px;
 	text-transform: uppercase;
 	font-weight: lighter;
-	display: inline-block;
 }
 .block-name__line{
 	height: 2px;
-	width: 35%;
+	width: 45px;
 	border: none;
 	margin-top: 10px;
 }
@@ -127,6 +126,7 @@
 }
 .portfolio__block-name{
 	color: #515f67;
+	display: inline-block;
 }
 .portfolio__line_styles{
 	background-color: #515f67;
@@ -166,3 +166,43 @@
 	margin-right: 0px
 }
 /*-----end portfolio-----*/
+
+/*-----video block--------*/
+.video-block{
+	background-color: #515f67;
+	padding: 80px 0px;
+}
+.video__block-name{
+	color: #fff;
+	margin-bottom: 40px;
+}
+.video__line_styles{
+	background-color: #fff;
+}
+.left-column{
+	display: inline-block;
+	width: 40%;
+	vertical-align: top;
+	margin-right: 58px;
+}
+.right-column{
+	display: inline-block;
+}
+.video-text__paragraph{
+	color: #fff;
+	font-family: "Segoe UI";
+	font-size: 14px;
+	line-height: 1.5;
+	margin-bottom: 40px;
+}
+.button__text{
+	color: #353f46;
+	font-family: "Segoe UI";
+	font-size: 14px;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-decoration: none;
+	border:2px solid #353f46;
+	padding: 15px 38px;
+}
+/*-----end video block------*/
