--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@
 	border: none;
 	margin-top: 10px;
 }
-
 /*------end general style blocks-----*/
 
 /*-----header------*/
@@ -206,3 +205,37 @@
 	padding: 15px 38px;
 }
 /*-----end video block------*/
+
+/*------twitter-------*/
+.twitter{
+	background-color: #4bcaff;
+	padding: 80px 0px;
+}
+.twitter__block-name{
+	color:#fff;
+	margin-bottom: 40px;
+	display: inline-block;
+}
+.twitter__line_styles{
+	background-color: #fff;
+}
+.twitter-content__text{
+	color: #fff;
+	font-family: "Segoe UI";
+	font-size: 28px;
+	font-weight: lighter;
+	line-height: 1.5;
+}
+.twitter-content__text_bold{
+	font-weight: bold;
+}
+.twitter__icon-block{
+	display: inline-block;
+	float: right;
+}
+.fa-twitter{
+	color: #fff;
+	font-size: 30px;
+}
+
+/*------end twitter----*/
