--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,37 @@
 	padding: 15px;
 	margin-right: 20px;
 }
-
-
 /*------end about john----*/
+
+/*------testimonials------*/
+.testimonials{
+	padding: 80px 0px;
+}
+.testimonials__block-name{
+	color: #515f67;
+	display: inline-block;
+}
+.testimonials__line_styles{
+	background-color: #515f67;
+}
+.testimonials-quotes{
+	display: inline-block;
+	float: right;
+	color: #515f67;
+	font-size: 40px;
+	font-weight: bold;
+}
+.testimonials-content__text{
+	color: #515f67;
+	font-family: "Segoe UI";
+	font-size: 26px;
+	line-height: 1.5;
+	padding: 40px 0px;
+}
+.testimonials-content__author{
+	color: #4bc9ff;
+	font-family: "Segoe UI";
+	font-size: 14px;
+	font-weight: bold;
+}
+/*------end testimonials------*/
