--- a/css/styles.css
+++ b/css/styles.css
@@ -310,3 +310,88 @@
 	font-weight: bold;
 }
 /*------end testimonials------*/
+
+/*--------contact--------*/
+.contact{
+	background: url('../images/contact-bg.png')no-repeat center center;
+	background-size: cover;
+	padding: 80px 0px;
+}
+.contact__block-name{
+	color: #fff;
+}
+.contact__line_styles{
+	background-color: #fff;
+}
+.contact-feedback{
+	margin-top: 40px;
+}
+.feedback__left-column{
+	display: inline-block;
+	width: 49%;
+	vertical-align: top;
+}
+.feedback__right-column{
+	display: inline-block;
+	width: 50%;
+	padding-top: 15px; 
+}
+.feedback__right-column_text{
+	color: #fff;
+	font-family: "Segoe UI";
+	font-size: 14px;
+	font-weight: bold;
+	line-height: 1.5;
+}
+.feedback_text-top{
+	margin-bottom: 40px;	
+}
+.form-name{
+	color: #fff;
+	font-family: "Segoe UI";
+	font-size: 14px;
+	font-weight: bold;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+}
+.form-input__left{
+	width: 70%;
+    padding: 12px;
+    font-size: 24px;
+    margin-bottom: 40px;
+}
+
+/*-----end contact--------*/
+
+/*------footer--------*/
+.footer{
+	background-color: #353f47;
+	padding: 80px 0px;
+}
+.footer-nav__item{
+	float: left;
+	border-right: 2px solid #515f67;
+	padding-right: 15px;
+	margin-right: 15px;
+}
+.footer-nav__link{
+	text-decoration: none;
+}
+.footer-nav__text{
+	color: #515f67;
+	font-family: "Segoe UI";
+	font-size: 12px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+.footer-nav__item_last{
+	border:none;
+}
+.сopyright{
+	float: right;
+	color: #515f67;
+	font-family: "Segoe UI";
+	font-size: 12px;
+	font-weight: bold;
+}
+/*-------end footer--------*/
