--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@
 .header-top{
 	background-color: #465158;
 	opacity: 0.8;
-	padding: 60px 0px;
+	padding: 40px 0px;
 }
 .logo{
 	display: inline-block;
@@ -157,6 +157,9 @@
 	margin: 0px 26px 30px 0px;
 	cursor: pointer;
 }
+.portfolio-photo__item:hover{
+	background-image:url('../images/hover-photo.png');
+}
 .photo-item_last{
 	margin-right: 0px
 }
@@ -182,6 +185,10 @@
 }
 .video__right-column{
 	display: inline-block;
+}
+.video__right-column_size{
+	width: 640px; 
+	height: 360px; 
 }
 .video-text__paragraph{
 	color: #fff;
