--- a/css/responsive.css
+++ b/css/responsive.css
@@ -51,10 +51,9 @@
 	}
 	.video__right-column{
 		margin-top: 40px;
-    	margin-left: 5%;
-	}
-	.form__bottom{
-		width: 95%;
+    	position: relative;
+    	left: 50%;
+    	margin-left: -300px;
 	}
 	.about__left-column{
 		width: 100%;
@@ -66,10 +65,88 @@
 	.about-john-content{
 		text-align: center;
 	}
+	.form__bottom{
+		width: 95%;
+	}
 }
 
 @media screen and (max-width: 768px) and (min-width: 480px) {
+	.container{
+		width: 95%;
+	}
+	.logo{
+		display: block;
+	}
+	.header-top{
+		text-align: center;
+	}
+	.menu{
+		float: none;
+	}
+	.menu__item{
+		margin-left: 0px;
+		padding-top: 25px;
+	}
+	.main-content__text{
+		font-size: 29px;
+	}
+	.services-item{
+		width: 45%;
+		margin-bottom: 25px;
+	}
+	.portfolio-nav{
+		float: none;
+		margin-top: 10px;
+		position: relative;
+    	left: 50%;
+    	margin-left: -215px;
+	}
+	.portfolio-nav__item{
+		margin-left: 0px;
+	}
+	.portfolio-photo{
+		text-align: center;
+	}
+	.photo-item_last{
+		margin: 0px 26px 30px 0px;
+	}
+	.video__left-column{
+		display: block;
+		width: 100%;
+	}
+	.video__right-column{
+		margin-top: 40px;
+    	position: relative;
+    	left: 50%;
+    	margin-left: -222px;
+	}
+	.video__right-column_size{
+		width: 440px;
+   		height: 260px;
+	}
+	.twitter-content__text{
+		font-size: 20px;
+	}
+	.about__left-column{
+		width: 100%;
+		margin-right: 0px;
+	}
+	.about__right-column{
+		width: 100%;
+	}
+	.about-john-content{
+		text-align: center;
+	}
+	.testimonials-content__text{
+		font-size: 20px;
+	}
 
+	.form__bottom{
+		width: 92%;
+	}
+	.form__submit{
+		width: 50%;
+	}
 }
 
 @media screen and (max-width: 479px) and (min-width: 320px) {
