--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,11 @@
 	width: 1170px;
 	margin: 0 auto;
 }
-
+.clearfix:after{
+    content: '';
+    clear: both;
+    display: table;
+}
 
 
 /*------general style blocks-----*/
