chenges in contact block responsive 768px - 480px

--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,8 @@
 .feedback__right-column{
 	display: inline-block;
 	width: 50%;
-	padding-top: 15px; 
+	padding-top: 15px;
+	float: right; 
 }
 .feedback__right-column_text{
 	color: #fff;
