--- a/css/responsive.css
+++ b/css/responsive.css
@@ -140,7 +140,13 @@
 	.testimonials-content__text{
 		font-size: 20px;
 	}
-
+	.feedback__left-column{
+		width: 100%;
+	}
+	.feedback__right-column{
+		width: 100%;
+		margin-bottom: 20px;
+	}
 	.form__bottom{
 		width: 92%;
 	}
