--- a/css/responsive.css
+++ b/css/responsive.css
@@ -206,8 +206,18 @@
 		margin-bottom: 25px;
 		text-align: center;
 	}
+	.portfolio-nav{
+		float: none;
+		text-align: center;
+	}
+	.portfolio-nav__item{
+		float: none;
+		margin-left: 0px;
+		padding-top: 15px;
+	}
 	.portfolio-photo{
 		text-align: center;
+		margin-top: 20px;
 	}
 	.portfolio-photo__item{
 		margin:  0px 0px 30px 0px;
