--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,7 @@ figure{
 	background-size: cover;
 }
 .header-top{
-	background-color: #465158;
-	opacity: 0.8;
+	background: rgba(73, 84, 91, 0.84);
 	padding: 40px 0px;
 }
 .logo{
@@ -46,11 +45,15 @@ figure{
 	float: right;
 }
 .menu__item{
-	float: left;
+	display: inline-block;
 	margin-left: 30px;
 	padding-top: 5px;
 }
+.menu__item_bars{
+	display: none;
+}
 .menu__link{
+	display: block;
 	text-decoration: none;
 	border:2px solid rgba(255,255,255,0);
 	padding: 10px;
