--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,14 @@ figure{
 .header{
 	background: url('../images/header-img.png')no-repeat center center;
 	background-size: cover;
+	padding-top: 190px;
 }
 .header-top{
 	background: rgba(73, 84, 91, 0.84);
 	padding: 40px 0px;
+	position: absolute;
+	top: 0px;
+	width: 100%;
 }
 .logo{
 	display: inline-block;
